<resources>
    <string name="app_name">Fable</string>
    <string name="sign_in_button">Sign In</string>
    <string name="sign_up_button">Sign Up</string>
    <string name="password">Password</string>
    <string name="userName">Username</string>

    <!-- Additions -->
    <string name="logo">FABLE</string>
    <string name="appLogo">App Logo</string>
    <string name="email">Email</string>
    <string name="slogan">Farm to Table Made Easy</string>
    <string name="account">Account</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="personalInfo">Personal Information</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="iAmA">I am a:</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="state">State:</string>
    <string name="zip">Zip Code</string>
    <string name="country">Country</string>
    <string name="phone">Phone Number</string>
    <string name="bio">Bio</string>
    <string name="finish">Finished</string>


    <string name="farmerSloganEditTextLabel">5 word or less slogan</string>
    <string name="farmerBioEditTextLabel">A brief paragraph describing your business</string>
    <string name="farmerProduceLabel">Produce Listings</string>
    <string name="createProduceListingTitle">Add Produce Listing</string>
    <string name="editProfileTitle">Edit Profile</string>
    <string name="done">Done Editing</string>
    <string name="doneAddingListing">Add produce listing</string>
    <string name="produceDescription">Short produce description</string>
    <string name="produceName">Produce name</string>
    <string name="priceLabel">$/lb</string>
    <string name="cancel">Cancel</string>

</resources>
