<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bkg_gradient"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".SignInActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin20"
        android:fontFamily="@font/sequel"
        android:text="@string/logo"
        android:textSize="@dimen/text50" />

    <EditText
        android:id="@+id/idEmailEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin5"
        android:layout_marginBottom="@dimen/margin5"
        android:ems="10"
        android:fontFamily="@font/light"
        android:hint="Email"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/idPasswordEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin5"
        android:layout_marginBottom="@dimen/margin5"
        android:ems="10"
        android:fontFamily="@font/light"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/idSignInButton"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin5"
        android:fontFamily="@font/semibold"
        android:onClick="onLoginClick"
        android:text="@string/sign_in_button" />

</LinearLayout>