<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bkg_gradient"
    android:clipToPadding="false">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/margin20"
        android:layout_marginTop="@dimen/margin20"
        android:layout_marginRight="@dimen/margin20"
        android:layout_marginBottom="@dimen/margin20"
        android:orientation="vertical"
        tools:context=".FarmerEditProfileActivity">

        <TextView
            android:id="@+id/idProfileTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin5"
            android:fontFamily="@font/bold"
            android:text="Profile"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/text35" />

        <ImageView
            android:id="@+id/idFarmerProfileImage"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:onClick="onImageSearch"
            android:src="@drawable/test_profile_picture"
            android:visibility="gone" />

        <TextView
            android:id="@+id/idSloganError"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin5"
            android:layout_marginBottom="@dimen/margin5"
            android:fontFamily="@font/semibold"
            android:text="@string/sloganError"
            android:textColor="@color/colorError"
            android:visibility="gone" />

        <EditText
            android:id="@+id/idSloganEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin5"
            android:layout_marginBottom="@dimen/margin5"
            android:background="@drawable/custom_edit_text"
            android:ems="10"
            android:fontFamily="@font/light"
            android:hint="@string/farmerSloganEditTextLabel"
            android:padding="@dimen/margin15"
            android:visibility="gone" />


        <EditText
            android:id="@+id/idShortDescriptionEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin5"
            android:layout_marginBottom="@dimen/margin5"
            android:background="@drawable/custom_edit_text"
            android:ems="10"
            android:fontFamily="@font/light"
            android:gravity="top|left"
            android:hint="@string/farmerBioEditTextLabel"
            android:lines="5"
            android:maxLines="10"
            android:minLines="5"
            android:padding="@dimen/margin15"
            android:scrollbars="vertical"
            android:visibility="gone" />
        <!-- Bottom 4 lines control # lines, and cursor gravity -->

        <TextView
            android:id="@+id/idProduceListingTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin20"
            android:layout_marginBottom="@dimen/margin5"
            android:fontFamily="@font/semibold"
            android:gravity="center"
            android:text="@string/farmerProduceLabel"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/text25"
            android:visibility="gone" />

        <ProgressBar
            android:id="@+id/idUploadingProgressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:indeterminateOnly="true"
            android:maxHeight="55dp"
            android:minHeight="50dp"
            android:visibility="gone" />

        <Button
            android:id="@+id/idDoneEditingButton"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin5"
            android:layout_marginBottom="@dimen/margin50"
            android:fontFamily="@font/semibold"
            android:onClick="onDoneEditingButtonPress"
            android:text="@string/done"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/text15" />

        <EditText
            android:id="@+id/idProduceNameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin5"
            android:layout_marginBottom="@dimen/margin5"
            android:background="@drawable/custom_edit_text"
            android:ems="10"
            android:fontFamily="@font/light"
            android:hint="@string/produceName"
            android:padding="@dimen/margin15"
            android:visibility="visible" />

        <EditText
            android:id="@+id/idProduceDescriptionEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin5"
            android:layout_marginBottom="@dimen/margin5"
            android:background="@drawable/custom_edit_text"
            android:ems="10"
            android:fontFamily="@font/light"
            android:hint="@string/produceDescription"
            android:padding="@dimen/margin15"
            android:visibility="visible" />

        <EditText
            android:id="@+id/idPriceEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin5"
            android:layout_marginBottom="@dimen/margin5"
            android:background="@drawable/custom_edit_text"
            android:ems="10"
            android:fontFamily="@font/light"
            android:padding="@dimen/margin15"
            android:visibility="visible" />

        <TextView
            android:id="@+id/idProducePriceLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin20"
            android:layout_marginBottom="@dimen/margin5"
            android:fontFamily="@font/semibold"
            android:gravity="center"
            android:text="@string/priceLabel"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/text25"
            android:visibility="visible" />

        <Button
            android:id="@+id/idAddListing"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin5"
            android:layout_marginBottom="@dimen/margin50"
            android:fontFamily="@font/semibold"
            android:onClick="onDoneAddingListingPress"
            android:text="@string/doneAddingListing"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/text15" />

        <Button
            android:id="@+id/idCancelButton"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin5"
            android:layout_marginBottom="@dimen/margin50"
            android:fontFamily="@font/semibold"
            android:onClick="onCancelButtonPress"
            android:text="@string/cancel"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/text15" />

    </LinearLayout>
</ScrollView>