<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bkg_gradient"
    android:clipToPadding="false">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/margin20"
        android:layout_marginTop="@dimen/margin20"
        android:layout_marginRight="@dimen/margin20"
        android:layout_marginBottom="@dimen/margin20"
        android:orientation="vertical"
        tools:context=".SignUpActivity">


        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="Edit Farmer Profile" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/bold"
            android:text="Profile"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/text35" />

        <ImageView
            android:id="@+id/idFarmerProfileImage"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/targeturi"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />





        <!--ADD IDs for the below-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin20"
            android:layout_marginBottom="@dimen/margin5"
            android:fontFamily="@font/semibold"
            android:gravity="center"
            android:text="@string/account"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/text25"
            android:visibility="visible" />

        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin5"
            android:layout_marginBottom="@dimen/margin5"
            android:fontFamily="@font/semibold"
            android:textColor="@color/colorError"
            android:visibility="gone" />

        <EditText

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin5"
            android:layout_marginBottom="@dimen/margin5"
            android:background="@drawable/custom_edit_text"
            android:ems="10"
            android:fontFamily="@font/light"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="@dimen/margin15"
            android:visibility="visible" />




        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin5"
            android:layout_marginTop="@dimen/margin5"
            android:fontFamily="@font/regular"
            android:text="@string/iAmA"
            android:textColor="@color/colorPrimaryDark" />

        <Spinner

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin5"
            android:background="@color/colorWhite"
            android:fontFamily="@font/light" />


        <Button
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin5"
            android:layout_marginBottom="@dimen/margin50"
            android:fontFamily="@font/semibold"
            android:text="@string/finish"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/text15" />
    </LinearLayout>
</ScrollView>